# SmartHire-AI

./: .gitignore  LICENSE  README.md  results.json
hireai/: .gitignore  README.md  pyproject.toml
hireai/src/hireai/: crew.py  main.py
hireai/src/hireai/config/: agents.yaml  tasks.yaml
