[project]
name = "hireai"
version = "0.1.0"
description = "HireAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
hireai = "hireai.main:run"
run_crew = "hireai.main:run"
train = "hireai.main:train"
replay = "hireai.main:replay"
test = "hireai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
